Fix proposal on mobile (#21)

--- a/app/assets/stylesheets/scss/pages/home/_cfs.scss
+++ b/app/assets/stylesheets/scss/pages/home/_cfs.scss
@@ -14,4 +14,22 @@
       line-height: 2em;
     }
   }
+
+  &.phone {
+    display: block;
+  }
+
+  &.higher {
+    display: none;
+  }
+
+  @include media-query(small) {
+    &.phone {
+      display: none;
+    }
+
+    &.higher {
+      display: block;
+    }
+  }
 }
